// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activities should render 1`] = `
<div>
  <div
    class="card-body no-padding"
  >
    <ul
      class="card-tabs-root mdn-button-tab"
    >
      <li
        class="card-tab active"
      >
        <a
          class="button-root btn btn-unstyled"
          href="/workspace/23/123123/contacts/accounts/1/activities/activities"
        >
          <span
            class="title"
          >
            Activities
          </span>
          <div>
            <span>
              <span
                class="primary-content"
              >
                <div
                  class="metric-value"
                >
                  100
                  <span
                    class="metric-value-letter"
                  >
                     
                  </span>
                </div>
              </span>
              <div
                class="analytics-trend"
                style="color: rgb(40, 125, 60);"
              >
                <svg
                  class="icon-root lexicon-icon lexicon-icon-caret-top"
                  viewBox=""
                >
                  <use
                    xlink:href="#caret-top"
                  />
                </svg>
                <span
                  class="analytics-trend-percent mb-0"
                >
                  1.3%
                </span>
              </div>
            </span>
          </div>
        </a>
      </li>
      <li
        class="card-tab"
      >
        <a
          class="button-root btn btn-unstyled"
          href="/workspace/23/123123/contacts/accounts/1/activities/engagement"
        >
          <span
            class="title"
          >
            Engagement Score
          </span>
          <div>
            <span>
              <span
                class="primary-content"
              >
                <div
                  class="metric-value"
                >
                  4.90
                  <span
                    class="metric-value-letter"
                  >
                    /10
                     
                  </span>
                </div>
              </span>
              <span
                class="text-secondary"
              >
                Avg. Member Score
              </span>
            </span>
          </div>
        </a>
      </li>
    </ul>
    <div
      class="card-body activities-chart-timeline-root no-padding"
    >
      <div
        class="chart-root activities-timeline-chart selectable"
      >
        <div
          class="chart-labels"
        >
          <span>
            Activities
          </span>
          <span />
        </div>
        <div />
      </div>
      <div
        class="selected-info"
      >
        <h4>
          Account's Activities - July 9, 2018 - July 10, 2018
        </h4>
      </div>
      <div
        class="base-results-root d-flex flex-column flex-grow-1"
      >
        <div
          class="toolbar-root"
        >
          <nav
            class="navbar navbar-root management-bar management-bar-light navbar-expand"
          >
            <div
              class="container-fluid"
            >
              <ul
                class="nav-root front-nav navbar-nav"
                role="tablist"
              />
              <div
                class="navbar-form navbar-form-autofit"
              >
                <div
                  class="input-group search"
                >
                  <div
                    class="input-group-item"
                  >
                    <input
                      class="input-root form-control input-group-inset input-group-inset-after"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                    <div
                      class="input-group-inset-item input-group-inset-item-after"
                    >
                      <button
                        class="button-root btn btn-unstyled"
                        type="button"
                      >
                        <svg
                          class="icon-root lexicon-icon lexicon-icon-search"
                          viewBox=""
                        >
                          <use
                            xlink:href="#search"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
        </div>
        <div
          class="vertical-timeline-root"
        >
          <div
            class="timeline-header"
          >
            <div
              class="header-label"
            >
              Time
            </div>
            <div
              class="header-title"
            >
              Session
            </div>
            <div
              class="header-count"
            >
              Activity Count
            </div>
          </div>
          <ul
            class="timeline timeline-center"
          >
            <li
              class="timeline-item header"
            >
              <div
                class="timeline-panel"
              >
                <div
                  class="timeline-panel-body"
                >
                  <div
                    class="timeline-panel-body-content"
                  >
                    <div
                      class="timeline-panel-body-content-text"
                    >
                      <div>
                        <span
                          class="text-truncate"
                        >
                          <span
                            class="title"
                          >
                            Jul 10, 2018
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="timeline-item"
            >
              <div
                class="timeline-panel"
              >
                <div
                  class="timeline-panel-body"
                >
                  <div
                    class="timeline-increment"
                  >
                    <div
                      class="sticker sticker-root sticker-static sticker-circle sticker-point sticker-lg"
                    />
                  </div>
                  <div
                    class="timeline-item-label"
                  >
                    11:01pm
                  </div>
                  <div
                    class="timeline-panel-body-content selectable"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="timeline-panel-body-content-text"
                    >
                      <div>
                        <span
                          class="text-truncate"
                        >
                          <span
                            class="title"
                          >
                            Visited www.liferay0.com
                          </span>
                        </span>
                      </div>
                      <span
                        class="text-truncate subtitle"
                        data-tooltip="false"
                        title=""
                      >
                        <span>
                          3 Visits
                        </span>
                      </span>
                    </div>
                    <div
                      class="timeline-panel-body-content-details"
                    >
                      <span
                        class="item-count"
                      >
                        3
                      </span>
                      <svg
                        class="icon-root lexicon-icon lexicon-icon-caret-top"
                        viewBox=""
                      >
                        <use
                          xlink:href="#caret-top"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <nav
          class="navbar navbar-root pagination-bar-root"
        >
          <div
            class="container-fluid"
          >
            <div
              aria-haspopup="true"
              class="dropdown dropdown-root pagination-items-per-page"
            >
              <button
                class="button-root btn btn-secondary dropdown-toggle show-caret btn-sm"
                type="button"
              >
                <span
                  class="text-truncate"
                >
                  2 Items
                </span>
                
                <span
                  class="caret-root"
                >
                  <svg
                    class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                    viewBox=""
                  >
                    <use
                      xlink:href="#caret-bottom"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="pagination-results"
            >
              Showing 1 to 1 of 1 entry.
            </div>
            <ul
              class="pagination pagination-root"
            >
              <li
                class="page-item disabled"
              >
                <button
                  class="button-root btn btn-unstyled page-link"
                  disabled=""
                  type="button"
                >
                  <svg
                    class="icon-root lexicon-icon lexicon-icon-angle-left"
                    viewBox=""
                  >
                    <use
                      xlink:href="#angle-left"
                    />
                  </svg>
                </button>
              </li>
              <li
                class="page-item active"
              >
                <button
                  class="button-root btn btn-unstyled page-link"
                  type="button"
                >
                  1
                </button>
              </li>
              <li
                class="page-item disabled"
              >
                <button
                  class="button-root btn btn-unstyled page-link"
                  disabled=""
                  type="button"
                >
                  <svg
                    class="icon-root lexicon-icon lexicon-icon-angle-right"
                    viewBox=""
                  >
                    <use
                      xlink:href="#angle-right"
                    />
                  </svg>
                </button>
              </li>
            </ul>
          </div>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`Activities should render with Engagement tab as active 1`] = `
<div>
  <div
    class="card-body no-padding"
  >
    <ul
      class="card-tabs-root mdn-button-tab"
    >
      <li
        class="card-tab"
      >
        <a
          class="button-root btn btn-unstyled"
          href="/workspace/23/123123/contacts/accounts/1/activities/activities"
        >
          <span
            class="title"
          >
            Activities
          </span>
          <div>
            <span>
              <span
                class="primary-content"
              >
                <div
                  class="metric-value"
                >
                  100
                  <span
                    class="metric-value-letter"
                  >
                     
                  </span>
                </div>
              </span>
              <div
                class="analytics-trend"
                style="color: rgb(40, 125, 60);"
              >
                <svg
                  class="icon-root lexicon-icon lexicon-icon-caret-top"
                  viewBox=""
                >
                  <use
                    xlink:href="#caret-top"
                  />
                </svg>
                <span
                  class="analytics-trend-percent mb-0"
                >
                  1.3%
                </span>
              </div>
            </span>
          </div>
        </a>
      </li>
      <li
        class="card-tab active"
      >
        <a
          class="button-root btn btn-unstyled"
          href="/workspace/23/123123/contacts/accounts/1/activities/engagement"
        >
          <span
            class="title"
          >
            Engagement Score
          </span>
          <div>
            <span>
              <span
                class="primary-content"
              >
                <div
                  class="metric-value"
                >
                  4.90
                  <span
                    class="metric-value-letter"
                  >
                    /10
                     
                  </span>
                </div>
              </span>
              <span
                class="text-secondary"
              >
                Avg. Member Score
              </span>
            </span>
          </div>
        </a>
      </li>
    </ul>
    <div
      class="card-body engagement-chart-list-root no-padding"
    >
      <div
        class="chart-root engagement-chart-root selectable"
      >
        <div
          class="chart-labels"
        >
          <span>
            Engagement
          </span>
          <span />
        </div>
        <div />
      </div>
      <div
        class="selected-point-info"
      >
        <h4>
          Engaged Members as of January 1, 1970
        </h4>
        <div
          class="secondary-info"
        >
          <div
            class="score"
          >
            Account Engagement 
            <b>
              0.00
            </b>
          </div>
          <div
            class="changed-values"
          >
            <span
              class="net-change"
            >
              <b>
                -NaN
              </b>
              (0%)
            </span>
             vs Previous Day
          </div>
        </div>
      </div>
      <div
        class="base-results-root d-flex flex-column flex-grow-1 searchable-table-root searchable-table-borderless"
      >
        <div
          class="toolbar-root"
        >
          <nav
            class="navbar navbar-root management-bar management-bar-light navbar-expand"
          >
            <div
              class="container-fluid"
            >
              <ul
                class="nav-root front-nav navbar-nav"
                role="tablist"
              />
              <div
                class="navbar-form navbar-form-autofit"
              >
                <div
                  class="input-group search"
                >
                  <div
                    class="input-group-item"
                  >
                    <input
                      class="input-root form-control input-group-inset input-group-inset-after"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                    <div
                      class="input-group-inset-item input-group-inset-item-after"
                    >
                      <button
                        class="button-root btn btn-unstyled"
                        type="button"
                      >
                        <svg
                          class="icon-root lexicon-icon lexicon-icon-search"
                          viewBox=""
                        >
                          <use
                            xlink:href="#search"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
        </div>
        <div
          class="table-responsive table-root flex-grow-1"
        >
          <table
            class="table table-autofit table-hover table-heading-nowrap table-nowrap"
          >
            <thead>
              <tr
                class=""
              >
                <th
                  class="table-head-title"
                >
                  <button
                    class="button-root btn btn-unstyled inline-item text-truncate-inline"
                    type="button"
                  >
                    <span
                      class="text-truncate"
                    >
                      Name
                    </span>
                  </button>
                </th>
                <th
                  class="table-head-title"
                >
                  <button
                    class="button-root btn btn-unstyled inline-item text-truncate-inline"
                    type="button"
                  >
                    <span
                      class="text-truncate"
                    >
                      Email
                    </span>
                  </button>
                </th>
                <th
                  class="table-head-title table-column-text-end"
                >
                  Total Activities
                </th>
                <th
                  class="table-head-title table-column-text-end"
                >
                  <button
                    class="button-root btn btn-unstyled inline-item text-truncate-inline"
                    type="button"
                  >
                    <span
                      class="text-truncate"
                    >
                      Engagement
                    </span>
                    <span
                      class="inline-item inline-item-after"
                    >
                      <svg
                        class="icon-root lexicon-icon lexicon-icon-order-arrow-down"
                        viewBox=""
                      >
                        <use
                          xlink:href="#order-arrow-down"
                        />
                      </svg>
                    </span>
                  </button>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class=""
              >
                <td
                  class="name-cell-root"
                >
                  <div
                    class="content-container"
                  >
                    <div
                      class="text-truncate"
                    >
                      <div
                        class="table-title text-truncate"
                      >
                        <a
                          class="text-truncate"
                          href="/workspace/23/contacts/individuals/known-individuals/ownerId0"
                        >
                          Test Individual - 0
                        </a>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class=""
                >
                  test0@liferay.com
                </td>
                <td
                  class=" table-column-text-end"
                >
                  -
                </td>
                <td
                  class=" table-column-text-end"
                >
                  8.00/10
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <nav
          class="navbar navbar-root pagination-bar-root"
        >
          <div
            class="container-fluid"
          >
            <div
              aria-haspopup="true"
              class="dropdown dropdown-root pagination-items-per-page"
            >
              <button
                class="button-root btn btn-secondary dropdown-toggle show-caret btn-sm"
                type="button"
              >
                <span
                  class="text-truncate"
                >
                  2 Items
                </span>
                
                <span
                  class="caret-root"
                >
                  <svg
                    class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                    viewBox=""
                  >
                    <use
                      xlink:href="#caret-bottom"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="pagination-results"
            >
              Showing 1 to 1 of 1 entry.
            </div>
            <ul
              class="pagination pagination-root"
            >
              <li
                class="page-item disabled"
              >
                <button
                  class="button-root btn btn-unstyled page-link"
                  disabled=""
                  type="button"
                >
                  <svg
                    class="icon-root lexicon-icon lexicon-icon-angle-left"
                    viewBox=""
                  >
                    <use
                      xlink:href="#angle-left"
                    />
                  </svg>
                </button>
              </li>
              <li
                class="page-item active"
              >
                <button
                  class="button-root btn btn-unstyled page-link"
                  type="button"
                >
                  1
                </button>
              </li>
              <li
                class="page-item disabled"
              >
                <button
                  class="button-root btn btn-unstyled page-link"
                  disabled=""
                  type="button"
                >
                  <svg
                    class="icon-root lexicon-icon lexicon-icon-angle-right"
                    viewBox=""
                  >
                    <use
                      xlink:href="#angle-right"
                    />
                  </svg>
                </button>
              </li>
            </ul>
          </div>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
